added styles to recipies website

--- a/html-intro/odin-recipies/recipies/pork-chops.html
+++ b/html-intro/odin-recipies/recipies/pork-chops.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Pork Chop Recipie</title>
 </head>
 <body>
-    <h1> Grilled Jamaican Jerked Pork Loin Chops</h1>
+    <h1 class="title"> Grilled Jamaican Jerked Pork Loin Chops</h1>
     <img src="../images/finished-chops.webp" alt="Pork Chops">
-    <p>
+    <p class="description">
         I like to buy a whole pork loin then cut them into
         chops so that I can get the thickness just right. 
         You can also use the marinade with pork tenderloin, 
         baby back ribs, and chicken.
     </p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="ingredients">Ingredients</h2>
+    <ul class="ing-list">
         <li>½ (12 ounce) bottle lager style beer</li>
         <li>3 fluid ounces dark rum</li>
         <li>¼ cup molasses</li>
@@ -34,8 +35,8 @@
         <li>kosher salt and cracked black pepper to taste</li>
 
     </ul>
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="steps">Steps</h2>
+    <ol class="steps-list">
         <li>
             Pour the beer, rum, molasses, soy sauce, and lime
             juice into a bowl. Stir in the garlic, ginger,
