--- a/html-intro/odin-recipies/recipies/greek-kabobs.html
+++ b/html-intro/odin-recipies/recipies/greek-kabobs.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>Greek Kabob Recipie</title>
 </head>
 <body>
-    <h1>
+    <h1 class="title">
         Marinated Greek Chicken Kabobs
     </h1>
     <img src="../images/finished-kabobs.webp" alt="Finished Kabobs">
-    <p>
+    <p class="description">
         This is a chicken kabob recipe that I 
         would love to share! Plan to marinate for 
         3 hours. Serve with Greek rice!
     </p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="ingredients">Ingredients</h2>
+    <ul class="ing-list">
         <li>1 (8 ounce) container fat-free plain yogurt</li>
         <li>⅓ cup crumbled feta cheese with basil and sun-dried tomatoes</li>
         <li>½ teaspoon lemon zest</li>
@@ -30,8 +31,8 @@
         <li>1 large green bell pepper, cut into 1 1/2 inch pieces</li>
 
     </ul>
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="steps">Steps</h2>
+    <ol class="steps-list">
         <li>
             In a large shallow baking dish, mix the yogurt, 
             feta cheese, lemon zest, lemon juice, oregano, 
