--- a/html-intro/odin-recipies/recipies/guava-pastries.html
+++ b/html-intro/odin-recipies/recipies/guava-pastries.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Guava Pastries</title>
+
 </head>
 <body>
-    <h1>Miami Guava Pastries</h1>
+    <h1 class="title">Miami Guava Pastries</h1>
     <img src="../images/finished-pastries.webp" alt="Guava Pastries">
-    <p>
+    <p class="description">
         This is the recipe for traditional Cuban/Puerto Rican pastries
         that can only be found in some places. Our family goes crazy
          for them! Dust with confectioners' sugar if desired.
     </p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="ingredients">Ingredients</h2>
+    <ul class="ing-list">
         <li>1 tablespoon all-purpose flour, or as needed</li>
         <li>1 sheet frozen puff pastry, thawed</li>
         <li>1 egg</li>
@@ -23,8 +25,8 @@
         <li>1 (8 ounce) jar guava paste, or as desired</li>
     
     </ul>
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="steps">Steps</h2>
+    <ol class="steps-list">
         <li>
             Preheat the oven to 350 degrees F (175 degrees C).
             Lightly flour a baking sheet.
