--- a/js-course/library-project/index.html
+++ b/js-course/library-project/index.html
@@ -34,14 +34,14 @@
         </div>
         <div class="bottom">
             <form>
-                <input id="title" type="text" name="title" placeholder="Title">
-                <input id="author" type="text" name="author" placeholder="Author">
-                <input id="pages" type="number" name="pages" placeholder="Pages">
+                <input id="title" type="text" name="title" placeholder="Title" required>
+                <input id="author" type="text" name="author" placeholder="Author" required>
+                <input id="pages" type="number" name="pages" placeholder="Pages" required>
                 <div class="read">
                     <label for="read">Read?</label>
-                    <input id="read" type="checkbox" name="read">
+                    <input id="read" type="checkbox" name="read" required>
                 </div>
-                <input id="submit" type="submit" value="Submit">
+                <input id="submit" type="submit" value="Submit" required>
                 
             </form>
         </div>
